# nbfx

./: pyproject.toml
.github/workflows/: python-app.yml
src/nbfx/: __init__.py  nbfx.py
tests/: test_nbfx.py
