[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbfx"
version = "0.0.1"
authors = [ {name="buherator", email="buherator@silentsignal.hu"}, ]
description = "Kaitai Struct parser of MS-NFX"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["kaitaistruct>=0.11"]

# For Git-based dependency fetching
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
